--- a/templates/core/app_base_admin.html
+++ b/templates/core/app_base_admin.html
@@ -159,7 +159,6 @@
                                     {% url 'rewarding:configuration' as rewarding_configuration_url %}
                                     <a href="{{ rewarding_configuration_url }}" title="Continuous Rewarding">
                                         {% trans "Continuous Rewarding" %}
-                                        <span class="label label-danger" style="text-transform: capitalize">New</span>
                                     </a>
                                 </li>
                             {% endif %}
@@ -178,12 +177,12 @@
                                             </a>
                                         </li>
                                         <li role="presentation"
-                                            class="dara-requests">{% url 'daraja:dara_request_list' as product_list_url %}
-                                            <a href="{{ product_list_url }}">{% trans "Requests" %}</a>
+                                            class="dara-requests">{% url 'daraja:dara_request_list' as dara_request_list_url %}
+                                            <a href="{{ dara_request_list_url }}">{% trans "Requests" context 'Daras requests' %}</a>
                                         </li>
                                         <li role="presentation"
-                                            class="daraja-configuration">{% url 'daraja:configuration' as product_list_url %}
-                                            <a href="{{ product_list_url }}">{% trans "Configuration" %}</a>
+                                            class="daraja-configuration">{% url 'daraja:configuration' as configuration_url %}
+                                            <a href="{{ configuration_url }}">{% trans "Configuration" %}</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -216,6 +215,12 @@
                         {% endif %}
                         {% endif %}
                     {% endif %}
+                    <div class="divider"></div>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li role="presentation" class="email-log">
+                            <a href="{% url 'ikwen:sent_email_log' %}">{% trans "Email Log" %}</a>
+                        </li>
+                    </ul>
                     {% if perms.accesscontrol.sudo %}
                         <div class="divider"></div>
                         <ul class="nav nav-pills nav-stacked">
