--- a/templates/core/app_base_admin.html
+++ b/templates/core/app_base_admin.html
@@ -193,7 +193,7 @@
                                     <a href="{{ profiletag_list_url }}">{% trans "Profiles" %}</a>
                                 </li>
                             {% endif %}
-                            {% if perms.rewarding.ik_manage_messaging %}
+                            {% if perms.echo.ik_manage_messaging %}
                                 <li role="presentation" class="messaging-campaign">
                                     <a href="javascript:;" data-toggle="collapse" data-target="#messaging-campaigns"
                                        aria-expanded="true" style="padding-right: 0;">
