--- a/templates/shopping/optimum/base.html
+++ b/templates/shopping/optimum/base.html
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         {% block meta %}{% endblock %}
-        {% include 'core/snippets/favicon.html' %}
+        {% include 'core/snippets/color_and_icons.html' %}
 		{% block page_title %}{% endblock %}
 		{% block head_style %}
             <link rel="stylesheet" href="{% static 'kakocase/css/bootstrap.css' %}" />
@@ -29,7 +29,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,400italic,300" rel="stylesheet">
             {% endif %}
 		{% endblock %}
-            <link href="{% static 'webnode/css/tchopetyamo/yamo.css' %}" rel="stylesheet">
+            <link href="{% static 'tchopetyamo/css/yamo.css' %}" rel="stylesheet">
         {% block head_js %}
             <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
             <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
