--- a/templates/shopping/optimum/base.html
+++ b/templates/shopping/optimum/base.html
@@ -404,7 +404,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
 
                         <div class="col-sm-6 col-md-4 footer-grid hidden-sm">
-                            <h4>{% trans "About" %}</h4>
+                            <h4>{% trans "Social" %}</h4>
                             <p>{{ config.description|truncatewords:25 }}</p>
                             <div class="social-icon">
                                 {% if config.facebook_link %}
