--- a/templates/core/app_base_admin.html
+++ b/templates/core/app_base_admin.html
@@ -115,17 +115,13 @@
                                 </li>
                             {% endif %}
                             {% if settings.IS_PROVIDER and perms.commarketing.ik_manage_marketing %}
-                                <li role="presentation" class="marketing">
-                                    <a href="javascript:;" data-toggle="collapse" data-target="#marketing"
+                                <li role="presentation" class="homepage">
+                                    <a href="javascript:;" data-toggle="collapse" data-target="#homepage"
                                        aria-expanded="true" style="padding-right: 0;">
-                                        {% if settings.IS_PROVIDER %}
-                                            {% trans "Com & Marketing" %}
-                                        {% elif settings.IS_RETAILER %}
-                                            {% trans "Homepage" %}
-                                        {% endif %}
+                                        {% trans "Homepage" %}
                                         <i class="fa fa-fw fa-caret-down"></i>
                                     </a>
-                                    <ul id="marketing" class="nav nav-pills nav-stacked collapse" aria-expanded="true"
+                                    <ul id="homepage" class="nav nav-pills nav-stacked collapse" aria-expanded="true"
                                         style="padding-left: 15px">
                                         <li class="smart-categories">{% url 'marketing:smart_category_list' as smart_category_list_url %}
                                             <a href="{{ smart_category_list_url }}">{% trans "Smart categories" %}</a>
@@ -133,12 +129,21 @@
                                         <li class="banners">{% url 'marketing:banner_list' as banner_list_url %}
                                             <a href="{{ banner_list_url }}">{% trans "Banners" %}</a>
                                         </li>
-
+                                    </ul>
+                                </li>
+                                <li role="presentation" class="marketing">
+                                    <a href="javascript:;" data-toggle="collapse" data-target="#marketing"
+                                       aria-expanded="true" style="padding-right: 0;">
+                                        {% trans "Com & Marketing" %}
+                                        <i class="fa fa-fw fa-caret-down"></i>
+                                    </a>
+                                    <ul id="marketing" class="nav nav-pills nav-stacked collapse" aria-expanded="true"
+                                        style="padding-left: 15px">
                                         <li class="promotion">{% url 'sales:promotion_list' as promotion_list_url %}
                                             <a href="{{ promotion_list_url }}">{% trans "Promotions" %}</a>
                                         </li>
-                                        <li class="discount">{% url 'sales:promocode_list' as promocode_list_url %}
-                                            <a href="{{ promocode_list_url }}">{% trans "Promo Codes" %}</a>
+                                        <li class="discount">{% url 'sales:promocode_list' as promo_code_list_url %}
+                                            <a href="{{ promo_code_list_url }}">{% trans "Promo Codes" %}</a>
                                         </li>
                                         <li class="emails">{% url 'sales:email_list' as email_list_url %}
                                             <a href="{{ email_list_url }}">{% trans "Emails" %}</a>
