--- a/templates/kakocase/welcome/first_time.html
+++ b/templates/kakocase/welcome/first_time.html
@@ -67,7 +67,7 @@
                     <div class="col-sm-offset-1 col-sm-4">
                         <img class="img-responsive" src="{% static 'tchopetyamo/img/welcome.jpg' %}">
                     </div>
-                    <div class="col-sm-offset-1 col-sm-1 text-center">
+                    <div class="col-sm-1 text-center">
                         <span class="hidden-xs" style="font-weight: 600; line-height: 200px; font-size: 32px">{% trans 'by' %}</span>
                         <span class="visible-xs" style="font-weight: 600; line-height: 50px; font-size: 32px">{% trans 'by' %}</span>
                     </div>
