--- a/templates/accesscontrol/sign_in.html
+++ b/templates/accesscontrol/sign_in.html
@@ -4,17 +4,24 @@
 {% block page_title %}<title>{{ service.project_name }} - {% trans "Sign in" %} </title>{% endblock %}
 {% block head_style %}
     {{ block.super }}
+    <link rel='stylesheet' href="{% static 'ikwen/css/pwa.css' %}?v=20.8.6" />
+    <link rel='stylesheet' href="{% static 'tchopetyamo/css/yamo.css' %}?v=20.8.6" />
     <style  type="text/css">
+        #navbar {background: #fff}
         #navbar .search, #navbar .navbar-right {display: none}
         label span {font-weight: normal}
         #lg-username {text-transform: lowercase}
         #terms-warning {color: #999; font-size: 11px}
         .login-with-ikwen {font-size: 1em; letter-spacing: .5px; padding: 6px 9px 8px}
         .login-with-ikwen strong {color: #7ea6ca}
+        @media (max-width: 767px) {
+            #login-form {border: none!important;}
+        }
     </style>
 {% endblock %}
 
 {% block content %}
+    {% include 'core/snippets/pwa_promotion/simple_button.html' %}
     <div id="content" class="form container">
         {% if login_form.errors %}
             <p class="failure" style="font-size: 1em; padding: 9px">{{ error_message }}</p>
@@ -36,7 +43,7 @@
                 </div>
                 {% trans "Login" %}
             </h3>
-            <form action="{% url 'ikwen:sign_in' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
+            <form id="login-form" action="{% url 'ikwen:sign_in' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
                 <div class="form-group" style="margin-top: .4em">
                     <label for="lg-username">{% trans "E-mail" %}</label>
                     <input id="lg-username" class="form-control input-sm username" type="text" name="username" autofocus
@@ -69,6 +76,7 @@
 {% endblock %}
 {% block js %}
     {{ block.super }}
+    <script src="{% static 'ikwen/js/pwa-main.js' %}?v=20.5.31"></script>
     <script type="text/javascript">
         {% get_current_language as LANGUAGE_CODE %}
         (function() {
