--- a/templates/shopping/optimum/base.html
+++ b/templates/shopping/optimum/base.html
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         {% block meta %}{% endblock %}
         {% if service.is_pwa_ready %}
-            <link rel="manifest" href="/manifest.json' %}">
+            <link rel="manifest" href="/manifest.json">
         {% endif %}
         {% include 'core/snippets/color_and_icons.html' %}
 		{% block page_title %}{% endblock %}
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <link rel="stylesheet" href="{% static 'kakocase/css/bootstrap.css' %}" />
             <link rel="stylesheet" href="{% static 'kakocase/css/font-awesome/css/font-awesome.min.css' %}" />
             <link rel="stylesheet" href="{% static 'kakocase/swiper/css/swiper.min.css' %}">
-            <link rel="stylesheet" href="{% static 'kakocase/css/optimum.css' %}?v=20.5.29" type="text/css" media="all" />
+            <link rel="stylesheet" href="{% static 'kakocase/css/optimum.css' %}?v=20.8.6.22" type="text/css" media="all" />
             <link rel="stylesheet" href="{% static 'ikwen/css/pwa.css' %}?v=20.5.29" type="text/css" media="all" />
             {% if config.theme %}
                 {% with theme=config.theme %}
@@ -32,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,400italic,300" rel="stylesheet">
             {% endif %}
 		{% endblock %}
-        <link href="{% static 'tchopetyamo/css/yamo.css' %}?v=03.31.20" rel="stylesheet">
+        <link href="{% static 'tchopetyamo/css/yamo.css' %}?v=20.8.6" rel="stylesheet">
         <script>
             navigator.serviceWorker.getRegistrations().then(
                 function(registrations) {
