--- a/templates/core/base_bs.html
+++ b/templates/core/base_bs.html
@@ -63,7 +63,7 @@
                                                     <a id="user-menu-xs" class="dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                         <i class="glyphicon glyphicon-user"></i>
                                                     </a>
-                                                    <ul class="dropdown-menu" aria-labelledby="user-menu-xs">
+                                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu-xs">
                                                         <li style="padding: 3px 20px"> {{ user.get_short_name }} </li>
                                                         <li role="separator" class="divider"></li>
                                                         <li>
@@ -92,7 +92,7 @@
                                                 <a class="icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="glyphicon glyphicon-user"></i>
                                                 </a>
-                                                <ul class="dropdown-menu" aria-labelledby="user-menu">
+                                                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu">
                                                     <li style="padding: 3px 20px"> {{ user.get_short_name }} </li>
                                                     <li role="separator" class="divider"></li>
                                                     <li>
