--- a/templates/shopping/optimum/base.html
+++ b/templates/shopping/optimum/base.html
@@ -145,8 +145,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                     <a href="{% url 'ikwen:staff_router' %}">Admin</a>
                                                 </li>
                                             {% endif %}
+                                            <li>
+                                                <a href="{% url 'shopping:orders_history' %}">{% trans "History" %}</a>
+                                            </li>
                                             <li>{% url "ikwen:account_setup" as account_setup_url %}
-                                                <a href="{{ account_setup_url|ikwenize }}">{% trans "Account setup" %}</a>
+                                                <a href="{{ account_setup_url }}">{% trans "Account setup" %}</a>
                                             </li>
                                             <li><a href="{% url "ikwen:logout" %}">{% trans "Logout" %}</a></li>
                                         </ul>
@@ -249,8 +252,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                                     <a href="{% url 'ikwen:staff_router' %}">Admin</a>
                                                                 </li>
                                                             {% endif %}
+                                                            <li>
+                                                                <a href="{% url 'shopping:orders_history' %}">{% trans "History" %}</a>
+                                                            </li>
                                                             <li>{% url "ikwen:account_setup" as account_setup_url %}
-                                                                <a href="{{ account_setup_url|ikwenize }}">{% trans "Account setup" %}</a>
+                                                                <a href="{{ account_setup_url }}">{% trans "Account setup" %}</a>
                                                             </li>
                                                             <li><a href="{% url "ikwen:logout" %}">{% trans "Logout" %}</a></li>
                                                         </ul>
@@ -374,8 +380,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 <a href="{% url 'ikwen:staff_router' %}">Admin</a>
                                             </li>
                                         {% endif %}
+                                        <li>
+                                            <a href="{% url 'shopping:orders_history' %}">{% trans "History" %}</a>
+                                        </li>
                                         <li>{% url "ikwen:account_setup" as account_setup_url %}
-                                            <a href="{{ account_setup_url|ikwenize }}">{% trans "Account setup" %}</a>
+                                            <a href="{{ account_setup_url }}">{% trans "Account setup" %}</a>
                                         </li>
                                         <li><a href="{% url "ikwen:logout" %}">{% trans "Logout" %}</a></li>
                                     </ul>
